--- a/lib/web/templates/page/index.html.eex
+++ b/lib/web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
 <div class="panel">
   <pre><code id="terminal"></code></pre>
 </div>
-<input type="text" name="command" id="command" autofocus="autofocus" />
+<input type="text" id="prompt" autofocus="autofocus" />
