Remove `has_many :npcs`
Breaks the MUD side, a separate query is fine

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -60,7 +60,7 @@
                 <th>NPCs</th>
                 <td>
                   <ul>
-                    <%= Enum.map @room.npcs, fn (npc) -> %>
+                    <%= Enum.map @npcs, fn (npc) -> %>
                       <li><%= npc.name %></li>
                     <% end %>
                   </ul>
