--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -10,6 +10,9 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
+          <div class="box-tools">
+            <%= link("Edit", to: item_path(@conn, :edit, @item.id), class: "btn btn-primary") %>
+          </div>
         </div>
         <div class="box-body">
           <table class="table">
@@ -21,6 +24,10 @@
               <tr>
                 <th>Description</th>
                 <td><%= @item.description %></td>
+              </tr>
+              <tr>
+                <th>Keywords</th>
+                <td><%= @item.keywords |> keywords() %></td>
               </tr>
               <tr>
                 <th>Effects</th>
