Add in new items via the admin panel
- Inserts into the game server

--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -27,7 +27,7 @@
               </tr>
               <tr>
                 <th>Keywords</th>
-                <td><%= @item.keywords |> keywords() %></td>
+                <td><%= @item |> keywords() %></td>
               </tr>
               <tr>
                 <th>Effects</th>
