Show stats in the item show page

--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -30,6 +30,10 @@
                 <td><%= @item |> keywords() %></td>
               </tr>
               <tr>
+                <th>Stats</th>
+                <td><%= @item |> stats() %></td>
+              </tr>
+              <tr>
                 <th>Effects</th>
                 <td>
                   <ul>
