--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -22,12 +22,12 @@
 
       <div class="form-group">
         <%= label f, :keywords %>
-        <%= text_input f, :keywords, value: @changeset.data |> keywords(), class: "form-control" %>
+        <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
       </div>
 
       <div class="form-group">
         <%= label f, :stats %>
-        <%= textarea f, :stats, value: @changeset.data |> stats(), class: "form-control" %>
+        <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control" %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
     </div>
