--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -30,6 +30,12 @@
         <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control" %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
+
+      <div class="form-group">
+        <%= label f, :effects %>
+        <%= textarea f, :effects, value: @changeset |> effects(), class: "form-control" %>
+        <span class="help-block">Enter in valid JSON</span>
+      </div>
     </div>
 
     <div class="box-footer">
