--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -8,32 +8,38 @@
       <div class="form-group">
         <%= label f, :type %>
         <%= select f, :type, types(), class: "form-control" %>
+        <%= error_tag f, :type %>
       </div>
 
       <div class="form-group">
         <%= label f, :name %>
         <%= text_input f, :name, class: "form-control" %>
+        <%= error_tag f, :name %>
       </div>
 
       <div class="form-group">
         <%= label f, :description %>
         <%= textarea f, :description, class: "form-control" %>
+        <%= error_tag f, :description %>
       </div>
 
       <div class="form-group">
         <%= label f, :keywords %>
         <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
+        <%= error_tag f, :keywords %>
       </div>
 
       <div class="form-group">
         <%= label f, :stats %>
         <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control" %>
+        <%= error_tag f, :stats %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
 
       <div class="form-group">
         <%= label f, :effects %>
         <%= textarea f, :effects, value: @changeset |> effects(), class: "form-control" %>
+        <%= error_tag f, :effects %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
     </div>
