--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -31,14 +31,14 @@
 
       <div class="form-group">
         <%= label f, :stats %>
-        <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control" %>
+        <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control", rows: 5 %>
         <%= error_tag f, :stats %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
 
       <div class="form-group">
         <%= label f, :effects %>
-        <%= textarea f, :effects, value: @changeset |> effects(), class: "form-control" %>
+        <%= textarea f, :effects, value: @changeset |> effects(), class: "form-control", rows: 15 %>
         <%= error_tag f, :effects %>
         <span class="help-block">Enter in valid JSON</span>
       </div>
