Remove spaces from user save pre tag

--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -36,11 +36,7 @@
               </tr>
               <tr>
                 <th>Save</th>
-                <td>
-                  <pre>
-                    <%= @user.save |> Poison.encode!(pretty: true) |> raw %>
-                  </pre>
-                </td>
+                <td><pre><%= @user.save |> Poison.encode!(pretty: true) %></pre></td>
               </tr>
             </tbody>
           </table>
