Create a new room via admin
After creating a new room it will be inserted into the zone supervision
tree.

--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -31,6 +31,9 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Rooms</h3>
+          <div class="box-tools">
+            <%= link("Add Room", to: zone_room_path(@conn, :new, @zone.id), class: "btn btn-primary") %>
+          </div>
         </div>
         <div class="box-body">
           <table class="table">
