--- a/lib/web/templates/admin/room/new.html.eex
+++ b/lib/web/templates/admin/room/new.html.eex
@@ -1,13 +1,13 @@
 <section class="content-header">
   <h1>
-    New Zone
+    New Room
   </h1>
 </section>
 
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: zone_path(@conn, :create), changeset: @changeset, title: "New", submit: "Create" %>
+      <%= render "_form.html", path: zone_room_path(@conn, :create, @zone.id), zone: @zone, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
 </section>
