Move the telnet client to `/play`
Adds a static home page, this can be expanded on to provide class
listings, help docs, etc

--- a/lib/web/templates/layout/play.html.eex
+++ b/lib/web/templates/layout/play.html.eex
@@ -4,18 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="<%= Config.game_name() %>">
+    <meta name="description" content="">
     <meta name="author" content="">
 
     <title><%= Config.game_name() %></title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/home.css") %>">
+    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
   <body>
-    <main>
-      <div class="container">
-        <%= render @view_module, @view_template, assigns %>
-      </div>
-    </main>
+    <%= render @view_module, @view_template, assigns %>
+    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
