Move version helper to the ExVenture module

--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -21,7 +21,7 @@
     <footer>
       <div class="container">
         <p class="text-muted">
-          Built with <%= Game.Session.Login.version() %>.
+          Built with <%= ExVenture.version() %>.
         </p>
       </div>
     </footer>
