--- a/lib/web/templates/admin/class/index.html.eex
+++ b/lib/web/templates/admin/class/index.html.eex
@@ -8,6 +8,11 @@
   <div class="row">
     <div class="col-md-12">
       <div class="box">
+        <div class="box-header">
+          <div class="box-tools">
+            <%= link("New Class", to: class_path(@conn, :new), class: "btn btn-primary") %>
+          </div>
+        </div>
         <div class="box-body">
           <table class="table">
             <thead>
