Add edit links to admin lists

--- a/lib/web/templates/admin/class/index.html.eex
+++ b/lib/web/templates/admin/class/index.html.eex
@@ -29,6 +29,7 @@
                   <td><%= class.name %></td>
                   <td>
                     <%= link("View", to: class_path(@conn, :show, class.id)) %>
+                    <%= link("Edit", to: class_path(@conn, :edit, class.id)) %>
                   </td>
                 </tr>
               <% end %>
