--- a/lib/web/templates/admin/class/show.html.eex
+++ b/lib/web/templates/admin/class/show.html.eex
@@ -75,6 +75,7 @@
                   <td><%= skill.name %></td>
                   <td>
                     <%= link("View", to: skill_path(@conn, :show, skill.id)) %>
+                    <%= link("Edit", to: skill_path(@conn, :edit, skill.id)) %>
                   </td>
                 </tr>
               <% end %>
