--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -40,26 +40,6 @@
                 </td>
               </tr>
               <tr>
-                <th>Exits</th>
-                <td>
-                  <%= if @room.north_id != nil do %>
-                    <%= link("North (#{@room.north.name})", to: room_path(@conn, :show, @room.north_id)) %>
-                    <br />
-                  <% end %>
-                  <%= if @room.east_id != nil do %>
-                    <%= link("East (#{@room.east.name})", to: room_path(@conn, :show, @room.east_id)) %>
-                    <br />
-                  <% end %>
-                  <%= if @room.south_id != nil do %>
-                    <%= link("South (#{@room.south.name})", to: room_path(@conn, :show, @room.south_id)) %>
-                    <br />
-                  <% end %>
-                  <%= if @room.west_id != nil do %>
-                    <%= link("West (#{@room.west.name})", to: room_path(@conn, :show, @room.west_id)) %>
-                  <% end %>
-                </td>
-              </tr>
-              <tr>
                 <th>NPCs</th>
                 <td>
                   <ul>
@@ -71,6 +51,56 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-offset-4 col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= if @room.north_id != nil do %>
+            <%= link("North (#{@room.north.name})", to: room_path(@conn, :show, @room.north_id)) %>
+          <% else %>
+            No Exit
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= if @room.west_id != nil do %>
+            <%= link("West (#{@room.west.name})", to: room_path(@conn, :show, @room.west_id)) %>
+          <% else %>
+            No Exit
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-offset-4 col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= if @room.east_id != nil do %>
+            <%= link("East (#{@room.east.name})", to: room_path(@conn, :show, @room.east_id)) %>
+          <% else %>
+            No Exit
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-offset-4 col-md-4">
+      <div class="box">
+        <div class="box-body">
+          <%= if @room.south_id != nil do %>
+            <%= link("South (#{@room.south.name})", to: room_path(@conn, :show, @room.south_id)) %>
+          <% else %>
+            No Exit
+          <% end %>
         </div>
       </div>
     </div>
