--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -19,25 +19,25 @@
 
       <div class="form-group">
         <%= label f, :north_id %>
-        <%= select f, :north_id, @zone |> room_select(), prompt: "Select room", class: "form-control" %>
+        <%= select f, :north_id, Zone.room_exits(), prompt: "Select room", class: "form-control" %>
         <%= error_tag f, :north_id %>
       </div>
 
       <div class="form-group">
         <%= label f, :east_id %>
-        <%= select f, :east_id, @zone |> room_select(), prompt: "Select room", class: "form-control" %>
+        <%= select f, :east_id, Zone.room_exits(), prompt: "Select room", class: "form-control" %>
         <%= error_tag f, :east_id %>
       </div>
 
       <div class="form-group">
         <%= label f, :south_id %>
-        <%= select f, :south_id, @zone |> room_select(), prompt: "Select room", class: "form-control" %>
+        <%= select f, :south_id, Zone.room_exits(), prompt: "Select room", class: "form-control" %>
         <%= error_tag f, :south_id %>
       </div>
 
       <div class="form-group">
         <%= label f, :west_id %>
-        <%= select f, :west_id, @zone |> room_select(), prompt: "Select room", class: "form-control" %>
+        <%= select f, :west_id, Zone.room_exits(), prompt: "Select room", class: "form-control" %>
         <%= error_tag f, :west_id %>
       </div>
     </div>
