Add in room coordinates
Start on a map for the game

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -30,6 +30,10 @@
                 <td><%= @room.description %></td>
               </tr>
               <tr>
+                <th>Coorinates</th>
+                <td><%= @room.x %>, <%= @room.y %></td>
+              </tr>
+              <tr>
                 <th>Items</th>
                 <td>
                   <ul>
