--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -30,6 +30,29 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
+          <h3 class="box-title">Map</h3>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <%= Enum.map(map(@zone), fn (row) -> %>
+              <tr>
+                <%= Enum.map(row, fn ({_coords, room}) -> %>
+                  <td><%= link(room.name, to: room_path(@conn, :show, room.id)) %></td>
+                <% (nil) -> %>
+                  <td></td>
+                <% end) %>
+              </tr>
+            <% end) %>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
           <h3 class="box-title">Rooms</h3>
           <div class="box-tools">
             <%= link("Add Room", to: zone_room_path(@conn, :new, @zone.id), class: "btn btn-primary") %>
