--- a/lib/web/templates/admin/room/new.html.eex
+++ b/lib/web/templates/admin/room/new.html.eex
@@ -2,6 +2,17 @@
   <h1>
     New Room
   </h1>
+
+  <ol class="breadcrumb">
+    <li>
+      <%= link(to: dashboard_path(@conn, :index)) do %>
+        <i class="fa fa-dashboard"></i> Home
+      <% end %>
+    </li>
+    <li><%= link("Zones", to: zone_path(@conn, :index)) %></li>
+    <li><%= link(@zone.name, to: zone_path(@conn, :show, @zone.id)) %></li>
+    <li class="active">New Room</li>
+  </ol>
 </section>
 
 <section class="content">
