Add basic stats to the dashboard

--- a/lib/web/templates/admin/dashboard/index.html.eex
+++ b/lib/web/templates/admin/dashboard/index.html.eex
@@ -3,3 +3,47 @@
     Dashboard
   </h1>
 </section>
+
+<section class="content">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="info-box">
+        <span class="info-box-icon bg-aqua"><i class="fa fa-users"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Users</span>
+          <span class="info-box-number"><%= Stats.user_count() %></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-box">
+        <span class="info-box-icon bg-aqua"><i class="fa fa-archive"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Items</span>
+          <span class="info-box-number"><%= Stats.item_count() %></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-box">
+        <span class="info-box-icon bg-aqua"><i class="fa fa-flag"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Zones</span>
+          <span class="info-box-number"><%= Stats.zone_count() %></span>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-box">
+        <span class="info-box-icon bg-aqua"><i class="fa fa-flag"></i></span>
+        <div class="info-box-content">
+          <span class="info-box-text">Rooms</span>
+          <span class="info-box-number"><%= Stats.room_count() %></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
