Change foreground and background colors in the web client

--- a/assets/app/css/app.css
+++ b/assets/app/css/app.css
@@ -2,8 +2,8 @@
 
 body {
   margin: 0;
-  background-color: #073642;
-  color: #eee8d5;
+  background-color: #002833;
+  color: #839496;
 }
 
 .panel {
