--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -45,6 +45,10 @@
                 <td><%= @room.x %>, <%= @room.y %></td>
               </tr>
               <tr>
+                <th>Last Save</th>
+                <td><%= @room.updated_at %></td>
+              </tr>
+              <tr>
                 <th>NPCs</th>
                 <td>
                   <ul>
@@ -60,11 +64,38 @@
       </div>
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Items</h3>
+        </div>
+        <div class="box-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= Enum.map @room.item_ids |> Items.items(), fn (item) -> %>
+                <tr>
+                  <td><%= link(item.name, to: item_path(@conn, :show, item.id)) %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Item Spawns</h3>
           <div class="box-tools">
             <%= link("Add Item", to: room_room_item_path(@conn, :new, @room.id), class: "btn btn-primary") %>
           </div>
@@ -92,6 +123,7 @@
       </div>
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-offset-4 col-md-4">
       <div class="box">
