Add an item to a room directly
Skip the spawner and add an item

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -70,6 +70,9 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Items</h3>
+          <div class="box-tools">
+            <%= link("Add Item", to: room_room_item_path(@conn, :new, @room.id, spawn: false), class: "btn btn-primary") %>
+          </div>
         </div>
         <div class="box-body">
           <table class="table">
@@ -97,7 +100,7 @@
         <div class="box-header">
           <h3 class="box-title">Item Spawns</h3>
           <div class="box-tools">
-            <%= link("Add Item", to: room_room_item_path(@conn, :new, @room.id), class: "btn btn-primary") %>
+            <%= link("Add Item Spawn", to: room_room_item_path(@conn, :new, @room.id), class: "btn btn-primary") %>
           </div>
         </div>
         <div class="box-body">
