--- a/lib/web/templates/admin/dashboard/index.html.eex
+++ b/lib/web/templates/admin/dashboard/index.html.eex
@@ -46,4 +46,21 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Currently Connected Players</h3>
+        </div>
+        <div class="box-body">
+          <ul class="list-group">
+            <%= Enum.map(@players, fn (player) -> %>
+              <li class="list-group-item"><%= player.name %></li>
+            <% end) %>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
